# indicator-syncthing

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  __pkginfo__.py  build_syncthing-ubuntu-indicator_deb.sh  formate.toml  indicator-syncthing.deb  indicator-syncthing.py  indicator_syncthing.py  lint_roller.sh  make_deb.sh  repo_helper.yml  requirements.txt  setup.cfg  setup.py  start-syncthing.sh  stubs.txt  syncthing-ubuntu-indicator.py  syncthing-ubuntu-indicator.sh  tox.ini
.ci/: copy_pypi_2_github.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs_test_action.yml  mypy.yml  octocheese.yml  python_ci_linux.yml
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  index.rst  usage.rst
doc-source/_templates/sidebar/: navigation.html
indicator_syncthing/: __init__.py  __main__.py  utils.py
