# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = indicator-syncthing
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = Apache Software License
keywords =
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Linux
url = https://github.com/domdfcoding/indicator-syncthing
project_urls =
    Issue Tracker = https://github.com/domdfcoding/indicator-syncthing/issues
    Source Code = https://github.com/domdfcoding/indicator-syncthing
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
python_requires = >=3.6.1
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True

[options.entry_points]
console_scripts =
    indicator_syncthing = indicator_syncthing.__main__:main
    indicator-syncthing = indicator_syncthing.__main__:main
